added content to destinations page and icons on footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank"><img src="/images/icons/insta.png"></a>
+            </li>
+            <li>
+                <a href="http://facebook.com/" target="_blank"><img src="/images/icons/facebook.png"></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
