added cards and finished project

--- a/index.html
+++ b/index.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="shared.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="shared.css" />
     <title>Amanda's Travel Bucket List</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-    <div id="page-logo">
+      <div id="page-logo">
         <a href="/index.html">Amanda's Goals</a>
-    </div>
-        <nav>
-            <ul>
-                <li><a href="/places.html">Destinations</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="/about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section id="hero">
-            <div id="hero-content">
-            <h1>Amanda's Travel Bucket List</h1>
-            <p>Let's explore the world together!</p>
-            <a href="/places.html">Discover new places!</a>
-            </div>
-        </section>
-        <section id="highlights">
-            <h2>Highlights</h2>
-            <ul id="destinations">
-                <li class="destination">
-                    <img src="/images/places/cinque-terre.jpg" alt="Cinque Terre">
-                    <p>Cinque Terre <strong>Italy</strong></p>
-                </li>
-                <li class="destination">
-                    <img src="/images/places/machu-picchu.jpg" alt="Machu Picchu">
-                    <p>Machu Picchu <strong>Peru</strong></p>
-                </li>
-                <li class="destination">
-                    <img src="/images/places/santorini.jpg" alt="Santorini">
-                    <p>Santorini <strong>Greece</strong></p>
-                </li>
-            </ul>
-        </section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Amanda's Travel Bucket List</h1>
+          <p>Let's explore the world together!</p>
+          <a href="/places.html">Discover new places!</a>
+        </div>
+      </section>
+      <section id="highlights">
+        <h2>Highlights</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img src="/images/places/cinque-terre.jpg" alt="Cinque Terre" />
+            <p>Cinque Terre <strong>Italy</strong></p>
+          </li>
+          <li class="destination">
+            <img src="/images/places/machu-picchu.jpg" alt="Machu Picchu" />
+            <p>Machu Picchu <strong>Peru</strong></p>
+          </li>
+          <li class="destination">
+            <img src="/images/places/santorini.jpg" alt="Santorini" />
+            <p>Santorini <strong>Greece</strong></p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank"><img src="/images/icons/insta.png"></a>
-            </li>
-            <li>
-                <a href="http://facebook.com/" target="_blank"><img src="/images/icons/facebook.png"></a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><img src="/images/icons/insta.png"
+          /></a>
+        </li>
+        <li>
+          <a href="http://facebook.com/" target="_blank"
+            ><img src="/images/icons/facebook.png"
+          /></a>
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
