--- a/places.html
+++ b/places.html
@@ -1,50 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="places.css">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Quicksand:wght@300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="places.css" />
+
     <title>Amanda's Travel Bucket List</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-    <div id="page-logo">
+      <div id="page-logo">
         <a href="/index.html">Amanda's Goals</a>
-    </div>
-        <nav>
-            <ul>
-                <li><a href="/places.html">Destinations</a></li>
-                <li><a href="/about.html">About</a></li>
-            </ul>
-        </nav>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="/about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <ul>
-            <li>
-                <img src="/images/places/cinque-terre.jpg" alt="Cinque Terre">
-                <div class="item-content">
-                    <h2>Cinque Terre</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae molestias dolorem voluptatum id quibusdam.
-                    </p>
-                </div>
-                <div class="actions">
-                    <a href="https://en.wikipedia.org/wiki/Cinque_Terre">Explore</a>
-                </div>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <img src="/images/places/cinque-terre.jpg" alt="Cinque Terre" />
+          <div class="item-content">
+            <div>
+              <h2>Cinque Terre</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                veniam natus velit eos dolores excepturi in est iure, tempora
+                asperiores laboriosam blanditiis?
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Cinque_Terre" target="_blank">Explore &#x2192</a>
+            </div>
+          </div>
+        </li>
+        <li>
+            <img src="/images/places/machu-picchu.jpg" alt="Machu Picchu" />
+            <div class="item-content">
+              <div>
+                <h2>Machu Picchu</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Machu_Picchu" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/santorini.jpg" alt="Santorini" />
+            <div class="item-content">
+              <div>
+                <h2>Santorini</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio magnam, eos in perferendis doloremque omnis officiis eligendi placeat aliquam obcaecati veniam odit voluptatibus quis repudiandae commodi ea quo animi.
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Santorini" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/barcelona.jpg" alt="City of Barcelona" />
+            <div class="item-content">
+              <div>
+                <h2>Barcelona</h2>
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                veniam natus velit eos dolores excepturi in est iure, tempora
+                asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Barcelona" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/hawaii.jpg" alt="Beach of Hawaii" />
+            <div class="item-content">
+              <div>
+                <h2>Hawaii</h2>
+                <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                veniam natus velit eos dolores excepturi in est iure, tempora
+                asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Hawaii" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/bali.jpg" alt="Bali" />
+            <div class="item-content">
+              <div>
+                <h2>Bali</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Bali" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/london.jpg" alt="London" />
+            <div class="item-content">
+              <div>
+                <h2>London</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/London" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/miami.jpg" alt="Miami" />
+            <div class="item-content">
+              <div>
+                <h2>Miami</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Miami" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/new-york-city.jpg" alt="New York City" />
+            <div class="item-content">
+              <div>
+                <h2>New York City</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/places/paris.jpg" alt="Paris" />
+            <div class="item-content">
+              <div>
+                <h2>Paris</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae ipsum corporis vero a aut aliquid quisquam facere
+                  veniam natus velit eos dolores excepturi in est iure, tempora
+                  asperiores laboriosam blanditiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita eveniet, doloribus necessitatibus aut delectus doloremque veritatis explicabo nihil vel dolor illo, quisquam vero modi molestiae excepturi ad molestias consectetur commodi?
+                </p>
+              </div>
+              <div class="actions">
+                <a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Explore &#x2192</a>
+              </div>
+            </div>
+          </li>
+      </ul>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank"><img src="/images/icons/insta.png"></a>
-            </li>
-            <li>
-                <a href="http://facebook.com/" target="_blank"><img src="/images/icons/facebook.png"></a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><img src="/images/icons/insta.png"
+          /></a>
+        </li>
+        <li>
+          <a href="http://facebook.com/" target="_blank"
+            ><img src="/images/icons/facebook.png"
+          /></a>
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
